tests/support/validation/invalid/block_without_runs/blocks.blk
VSC;hba11011;Weekday   ; 0;02;BUS12021  ;Albny   ;Albany Weekday REMAKE
BLK;    A57-7;   4484646;12345  ;albny ;0415a;wtryd ;0430a;kenbs ;0858a;albny ;0919a;    ;    ;        ;011;;
TIN;  46489778
